[package]
name = "sudoku-stuff"
version = "0.1.0"
authors = ["CamNewton <cameron.newton@vgw.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.4.0"
lazy_static = "1.4.0"
num_cpus = "1.0"

[profile.release]
opt-level = 3